<resources>
    <string name="app_name">MyFriendAPI</string>
    <string name="label_must_fill">Wajib diisi.</string>
    <string name="profile_photo">profile_photo</string>
    <string name="name">Name</string>
    <string name="school">School</string>
    <string name="description">Description</string>
    <string name="like">Like</string>
    <string name="edit_profil">EDIT PROFIL</string>
    <string name="profile_photo2">profile_photo</string>
    <string name="name2">Name</string>
    <string name="school2">School</string>
    <string name="description2">Description</string>
    <string name="save">Save</string>
    <string name="username">username</string>
    <string name="text">text</string>
    <string name="description_empty">description empty</string>
    <string name="school_empty">school empty</string>
    <string name="username_empty">username empty</string>
    <string name="search">search</string>
    <string name="file_empty">File Empty</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="my_friend">MY FRIEND</string>
    <string name="know_your_friends">Know Your Friends</string>
    <string name="phone">phone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="detail">Detail</string>
    <string name="profil">PROFIL</string>
    <string name="profile_photo3">profile_photo</string>
    <string name="name4">Name</string>
    <string name="school4">School</string>
    <string name="description4">Description</string>
    <string name="edit_profil4">Edit Profil</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="my_friend2">MY FRIEND</string>
    <string name="create_your_new_account">Create Your New Account</string>
    <string name="name5">name</string>
    <string name="phone4">phone</string>
    <string name="password3">Password</string>
    <string name="register2">Register</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="my_friend5">MY FRIEND</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="search_friend">search friend</string>
    <string name="name_empty">Name Empty</string>
    <string name="school_empty2">School Empty</string>
    <string name="description_empty2">Description Empty</string>
    <string name="profile">PROFILE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register4">REGISTER</string>
    <string name="detail2">DETAIL</string>
    <string name="edit_profile2">EDIT PROFILE</string>
    <string name="unlike">Unlike</string>
    <string name="phone2">Phone</string>
    <string name="favourite">Favourite</string>
    <string name="name3">Name</string>
    <string name="phone5">Phone</string>
    <string name="my_friend3">MY FRIEND</string>
    <string name="todo18">TODO</string>
    <string name="name6">Name</string>
    <string name="phone6">Phone</string>
    <string name="password6">Password</string>
    <string name="already_have_anaccount_login">Already Have an Account? Login</string>
    <string name="phone7">Phone</string>
    <string name="password7">Password</string>
    <string name="create_your_new_accoun_register">Create Your New Account? Register</string>
    <string name="waiting">Waiting…</string>
</resources>