<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="edit"
            type="com.marshanda.myfriendapi.ui.edit.EditProfileActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fanta_50"
        tools:context=".ui.edit.EditProfileActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profil"
            android:textColor="@color/fanta_400"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo_edit_profil"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_photo2"
            android:src="@drawable/img_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135"
            tools:tint="@color/white" />

        <TextView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:text="@string/name2"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.388" />

        <EditText
            android:id="@+id/et_name_edit_profil"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:autofillHints="username"
            android:background="@drawable/custom_button_fram"
            android:hint="@string/username_empty"
            android:inputType="textPersonName"
            android:padding="@dimen/_9sdp"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

        <TextView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:text="@string/school2"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

        <EditText
            android:id="@+id/et_school_edit_profil"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_1sdp"
            android:autofillHints="text"
            android:background="@drawable/custom_button_fram"
            android:hint="@string/school_empty"
            android:inputType="text"
            android:padding="@dimen/_9sdp"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

        <TextView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:text="@string/description2"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.672" />

        <EditText
            android:id="@+id/et_dsction_edit_profil"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            android:autofillHints="text"
            android:background="@drawable/custom_button_fram"
            android:hint="@string/description_empty"
            android:inputType="text"
            android:padding="@dimen/_9sdp"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.751" />

        <Button
            android:id="@+id/btn_save_edit_profil"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/custom_buttom"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.926" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>