<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bgn_tranparan"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/todo3"
            android:src="@drawable/img_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_150sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:gravity="center"
                android:text="@string/my_friend"
                android:textColor="@color/fanta_400"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text="@string/know_your_friends"
                android:textColor="@color/fanta_400"
                android:textSize="@dimen/_13ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teks_input_layout_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/phone7"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="@color/red_400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_phone_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints=""
                    android:drawableStart="@drawable/ic_smartphone"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="phone"
                    app:counterMaxLength="21"
                    app:hintEnabled="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teks_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/password7"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperText="Required"
                app:helperTextTextColor="@color/red_400"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:counterMaxLength="21"
                    app:hintEnabled="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/custom_buttom"
                android:fontFamily="@font/poppinsbold"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_17ssp" />

            <TextView
                android:id="@+id/tv_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?selectableItemBackground"
                android:fontFamily="@font/poppinsregular"
                android:foreground="?selectableItemBackground"
                android:text="@string/create_your_new_accoun_register"
                android:textColor="@color/fanta_400"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </RelativeLayout>

</layout>