<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bgn_tranparan"
        tools:context=".ui.register.RegisterActivity">

        <ImageView
            android:id="@+id/iv_back_register"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/todo4"
            android:elevation="@dimen/_20sdp"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginStart="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:contentDescription="@string/todo5"
            android:src="@drawable/img_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_150sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/register4"
                android:textColor="@color/fanta_400"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text="@string/create_your_new_account"
                android:textColor="@color/fanta_400"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teks_input_layout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/name6"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="@color/red_400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="name"
                    android:drawableStart="@drawable/ic_person_fanta"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="textPersonName"
                    app:counterMaxLength="21"
                    app:hintEnabled="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teks_input_layout_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/phone6"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="@color/red_400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_phone_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="phone"
                    android:drawableStart="@drawable/ic_smartphone"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="phone"
                    app:counterMaxLength="21"
                    app:hintEnabled="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teks_input_layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_260sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/password6"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperText="Required"
                app:helperTextTextColor="@color/red_400"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:counterMaxLength="21"
                    app:hintEnabled="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_41sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/custom_buttom"
                android:fontFamily="@font/poppinsbold"
                android:foreground="?selectableItemBackground"
                android:text="@string/register2"
                android:textAllCaps="false"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/back_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/already_have_anaccount_login"
                android:textColor="@color/fanta_400"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>


    </RelativeLayout>

</layout>